[gd_scene load_steps=6 format=3 uid="uid://bi223pj0x8f8s"]

[ext_resource type="Script" path="res://Card Scenes/complete_card.gd" id="1_w4x7j"]
[ext_resource type="PackedScene" uid="uid://c5unkrxf8u18p" path="res://card.tscn" id="2_2bdmc"]
[ext_resource type="Texture2D" uid="uid://41tvq47kla0v" path="res://Assets/ranger_card_base.png" id="3_3fmjl"]
[ext_resource type="Texture2D" uid="uid://wsg7ojqie8hj" path="res://Assets/rip_out_art.png" id="3_wmkt7"]
[ext_resource type="Script" path="res://Scripts/rip_out_action.gd" id="5_ncwxs"]

[node name="RipOut" type="Node2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_w4x7j")

[node name="Card" parent="." instance=ExtResource("2_2bdmc")]
card_name = "Rip Out"
card_description = "If target is pinned: deal 2 damage and gain 1 bolt"
card_cost = 1
card_image = ExtResource("3_wmkt7")
card_background = ExtResource("3_3fmjl")

[node name="Function" type="Node2D" parent="."]
script = ExtResource("5_ncwxs")

[connection signal="mouse_entered" from="Card" to="." method="_on_card_mouse_entered"]
[connection signal="mouse_exited" from="Card" to="." method="_on_card_mouse_exited"]
